<resources>
    <string name="app_name">任务管理</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="password">密码</string>
    <string name="title_activity_log">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="home_page">首页</string>
    <string name="new_task">新任务</string>
    <string name="task_classify">任务分类</string>
    <string name="task_started">已发起</string>
    <string name="task_focused">已关注</string>
    <string name="task_responsible">已负责</string>
    <string name="task_completed">已完成</string>
    <string name="task_overdue">已逾期</string>
    <string name="all_tasks">所有任务</string>

</resources>
