<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/layout_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_task_classify"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/task_classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
        android:background="@color/layout_bg_color"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_task_started"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_task_started"
                android:src="@drawable/task_started_2x"
                android:layout_width="@dimen/task_state_iv_size"
                android:layout_height="@dimen/task_state_iv_size"/>
            <TextView
                android:id="@+id/tv_task_started"
                android:text="@string/task_started"
                android:layout_below="@+id/iv_task_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_task_focused"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_task_focused"
                android:src="@drawable/task_focused_2x"
                android:layout_width="@dimen/task_state_iv_size"
                android:layout_height="@dimen/task_state_iv_size"/>
            <TextView
                android:id="@+id/tv_task_focused"
                android:text="@string/task_focused"
                android:layout_below="@+id/iv_task_focused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_task_responsible"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_task_responsible"
                android:src="@drawable/task_responsible_2x"
                android:layout_width="@dimen/task_state_iv_size"
                android:layout_height="@dimen/task_state_iv_size"/>
            <TextView
                android:id="@+id/tv_task_responsible"
                android:text="@string/task_responsible"
                android:layout_below="@+id/iv_task_responsible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_task_completed"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_task_completed"
                android:src="@drawable/task_completed_2x"
                android:layout_width="@dimen/task_state_iv_size"
                android:layout_height="@dimen/task_state_iv_size"/>
            <TextView
                android:id="@+id/tv_task_completed"
                android:text="@string/task_completed"
                android:layout_below="@+id/iv_task_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_task_overdue"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_task_overdue"
                android:src="@drawable/task_overdue_2x"
                android:layout_width="@dimen/task_state_iv_size"
                android:layout_height="@dimen/task_state_iv_size"/>
            <TextView
                android:id="@+id/tv_task_overdue"
                android:text="@string/task_overdue"
                android:layout_below="@+id/iv_task_overdue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_all_tasks"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/all_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>
