<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_left_right_padding"
              android:paddingRight="@dimen/activity_left_right_padding">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.rhtop.taskmanager.ui.widget.CircleTextView
                android:id="@+id/circletv_name"
                app:circleColor="@color/sub_color"
                app:textColor="@color/white_text_color"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/sp_phone_prefix"
                android:entries="@array/phone_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Spinner>
            <EditText
                android:id="@+id/et_phone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:hint="@string/input_phone_number"
                android:textColorHint="@color/light_blue_text_color"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_password"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_password"
                android:hint="@string/input_password"
                android:textColorHint="@color/light_blue_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:background="@drawable/selector_login"
            android:text="@string/login"
            android:textColor="@color/white_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>
